# X-TRACK

./: .gitmodules
Hardware/X-TRACK ESP32版/: X-Track-ESP32.SchDoc
Hardware/X-TRACK ESP32版/Gerber直接打样/: Status Report.Txt  X-Track-ESP32-RoundHoles.TXT  X-Track-ESP32-SlotHoles.TXT  X-Track-ESP32-macro.APR_LIB  X-Track-ESP32.DRR  X-Track-ESP32.EXTREP  X-Track-ESP32.G1  X-Track-ESP32.G2  X-Track-ESP32.GBL  X-Track-ESP32.GBO  X-Track-ESP32.GBP  X-Track-ESP32.GBS  X-Track-ESP32.GD1  X-Track-ESP32.GG1  X-Track-ESP32.GM1  X-Track-ESP32.GPB  X-Track-ESP32.GPT  X-Track-ESP32.GTL  X-Track-ESP32.GTO  X-Track-ESP32.GTP  X-Track-ESP32.GTS  X-Track-ESP32.LDP  X-Track-ESP32.REP  X-Track-ESP32.RUL  X-Track-ESP32.apr
Software/X-Track/ESPIDF/: .gitignore  CMakeLists.txt  README.md  sdkconfig
Software/X-Track/ESPIDF/components/lv_fs_if/: CMakeLists.txt  lv_fs_if.h
Software/X-Track/ESPIDF/components/lvgl/src/: lv_conf_internal.h
Software/X-Track/ESPIDF/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
Software/X-Track/ESPIDF/components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
Software/X-Track/ESPIDF/main/: CMakeLists.txt  xtrack_main.cpp
Software/X-Track/ESPIDF/main/HAL/: HAL.cpp  HAL_Audio.cpp  HAL_Buzz.cpp  HAL_Clock.cpp  HAL_Display.cpp  HAL_Display.h  HAL_Encoder.cpp  HAL_GPS.cpp  HAL_IMU.cpp  HAL_MAG.cpp  HAL_Power.cpp  HAL_SD_CARD.cpp
Software/X-Track/Libraries/TinyGPSPlus/src/: TinyGPS++.cpp
Software/X-Track/USER/App/: Version.h
Software/X-Track/USER/App/Common/DataProc/: DP_SysConfig.cpp
Software/X-Track/USER/App/Pages/Dialplate/: Dialplate.cpp  Dialplate.h
Software/X-Track/USER/App/Utils/MapConv/: MapConv_Bing.cpp
Software/X-Track/USER/App/Utils/Time/: TimeLib.h
Software/X-Track/USER/App/Utils/WString/: WString.cpp
